--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: "node_js"
 node_js: "7"
-script: echo “Deploy!!”
-install: "npm install -g firebase-tools
+script: echo "deploy!!"
+install: npm install -g firebase-tools
 after_success:
-— 'firebase deploy — project test2-e87a8 — token $FIREBASE_TOKEN.'
+- 'firebase deploy - project test2-e87a8 - token $FIREBASE_TOKEN.'
