--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ node_js: "7"
 script: echo "deploy!!"
 install: npm install -g firebase-tools
 after_success:
-- 'firebase deploy - project test2-e87a8 - token $FIREBASE_TOKEN.'
+- 'firebase deploy - project test2-1668b - token $FIREBASE_TOKEN.'
