--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: "node_js"
-node_js: "7"
-script: echo "deploy!!"
-install: npm install -g firebase-tools
+node_js: 
+  - "7"
+script: 
+  - echo "deploy!!"
+install: 
+  - npm install -g firebase-tools
 after_success:
-- 'firebase deploy - project test2-1668b - token $FIREBASE_TOKEN.'
+  - 'firebase deploy - project test2-1668b - token $FIREBASE_TOKEN.'
